fix: enhance signature verification system
- Fix JSON normalization and sorting for consistent signature generation
- Improve SignUtils with better error handling and request canonicalization
- Enhance SignInterceptor with proper header validation and expiration checks
- Optimize signature verification algorithm for better performance
- Add comprehensive error handling for various content types